MAINTAINERCLEANFILES = Makefile.in

# Install the header files

nobase_include_HEADERS = Dt/Editor.h \
	Dt/TermPrim.h \
	Dt/Term.h \
	Dt/HelpDialog.h \
	Dt/Help.h \
	Dt/HelpQuickD.h \
	Dt/Print.h \
	Dt/Mrm.h \
	Dt/Dt.h \
	Dt/Action.h \
	Dt/Dnd.h \
	Dt/Dts.h \
	Dt/Session.h \
	Dt/Saver.h \
	Dt/Wsm.h \
	Dt/MsgLog.h \
	Dt/ComboBox.h \
	Dt/SpinBox.h \
	Dt/MenuButton.h \
	Tt/tt_c.h \
	Tt/tttk.h \
	csa/csa.h \
	Dt/Info.h \
	Dt/Search.h \
	Dt/Mmdb.h \
	Dt/DtXinerama.h \
	Dt/PamSvc.h



