MAINTAINERCLEANFILES = Makefile.in

SUBDIRS = backdrops icons dsdm dtmail dtpad dtfile dtwm dtlogin \
        dtsession dthello dtstyle dtexec dtdbcache dticon dtterm dtcalc \
	dtaction dtspcd dtscreen dtcm dtsearchpath dtappbuilder palettes \
	dtappintegrate dtprintegrate dtconfig dtcreate dtprintinfo fontaliases \
	dtdspmsg dtimsstart dtpdm dtsr dtpdmd types \
	tttypes util dtopen localized dthelp nsgmls dtdocbook

# NOTYET = dtksh dtinfo ttsnoop
